bin_PROGRAMS       = test_vkil test_vkdrv

test_vkil_SOURCES  = test_vkil.c
test_vkil_CPPFLAGS = -I$(top_srcdir)/src
test_vkil_LDADD    = $(top_builddir)/src/libvkil.la

test_vkdrv_SOURCES  = test_vkdrv.c
test_vkdrv_CPPFLAGS = -I$(top_srcdir)/src
test_vkdrv_LDADD    = $(top_builddir)/src/libvkil.la
